# a_maze_ing

./: .a-maze-ing.py.swp  .a.py.swp  .config.txt.swp  .gitignore  .maze_show.py.swp  Makefile  TODO.md  a-maze-ing.py  a.py  config.txt  config_BACKUP_33085.txt  config_LOCAL_33085.txt  config_REMOTE_33085.txt  en.subject.txt  maze.txt  maze_show.py  mlx-2.2-py3-none-any.whl  notes  og_config.txt  pyproject.toml
amazing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rank_02/a_maze_ing/: .a.py.swp  .config.txt.swp  a.py  config.txt  t.py  xclip -selection clipboard
src/: __init__.py  a_maze.py  amaze.py  config.txt  options.py
src/amazing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/config/: __init__.py  config.py
src/graphics/: .__init__.py.swp  .render.py.swp  __init__.py  mlx_context.py  new structure  render.py
src/graphics/assets/: textures.py
src/graphics/engine/: animator.py  canvas.py  event_loop.py  renderer.py  window.py
src/graphics/gameLogic/: grid_renderer.py
src/graphics/game_logic/: animations.py  grid_renderer.py
src/helper/: __init__.py  grid_cell.py  vector.py
src/mazegen/: .__init__.py.swp  .a.py.swp  __init__.py  generators.py
src/options/: __init__.py  options.py
